--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.3",
+    "gsap": "^3.11.4",
     "maplibre-gl": "^2.4.0",
     "vue": "^3.2.45"
   },
@@ -17,6 +19,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "fs-extra": "^11.1.0",
     "lodash": "^4.17.21",
+    "sass": "^1.58.3",
     "vite": "^4.1.0"
   }
 }
